--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/SummerElise/Employee-tracker-12#readme",
   "dependencies": {
+    "console.table": "^0.10.0",
+    "inquirer": "^8.1.1",
     "mysql": "^2.18.1"
   }
 }
